[package]
name = "bertml"
version = "0.1.0"
edition = "2021"

[lib]
name = "bertml"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "0.8.2", features = ["v4"] } # matches rust-bert's
